# ARBITER

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  rust_actual.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
_ide/: .peers.ini  .vitisPlatformRepo.json  version.ini  workspace_journal.py  workspace_journal_16144.py
_ide/.wsdata/: .repo.yaml
app_bame/: compile_commands.json  vitis-comp.json  zedboard_driver.cpp
app_bame/_ide/: hwspec.checksum  launch.json
app_bame/_ide/bitstream/: bamewrapper.bit
app_bame/src/: CMakeLists.txt  UserConfig.cmake  app.yaml
bameplatform/: vitis-comp.json
bameplatform/hw/: bamewrapper.xsa
bameplatform/zynq_fsbl/: app.yaml  compile_commands.json
cpp/: Makefile  main.cpp  matcher.cpp  matcher.h  order.h  orderbook.cpp  orderbook.h  zedboard_driver.cpp
genus_bame/project/: .rs_vlsilab.tstamp  area.rpt  genus.cmd  order_buffer.v  power.rpt  timing.rpt  top.v  top_netlist.v  top_out.sdc
paper/: bame_technical_report.md
project/: arbiter.v  genus_synth.tcl  matcher.v  sort_unit.v  top.sdc
project/netlist/: .keep
project/reports/: .keep
project/scripts/: filelist.f  genus_synth.tcl
rtl/: bame_arb_cmp.v  bame_axi_wrapper.v  bame_top.v  bame_zedboard.xdc  build_zedboard_soc.tcl  master_bame.tcl  sim_bame.tcl  synth_bame.tcl  tb_bame_top.v
src/: batch_matcher.rs  csv_parser.rs  itch_parser.rs  main.rs  orderbook.rs  types.rs
tests/: golden_output.txt  orders.mem  orders.txt
(+84 files in other folders)
