[package]
name = "bame"
version = "1.0.0"
edition = "2021"
description = "Batched Arbitration Matching Engine — Rust reference + ITCH 5.0 ingress"
license = "MIT"
repository = "https://github.com/aknoru/ARBITER"
default-run = "bame"

# ── Binaries ─────────────────────────────────────────────────────────────────
[[bin]]
name = "bame"
path = "src/main.rs"

# ── Release profile ───────────────────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
